--- a/需求文档.md
+++ b/需求文档.md
@@ -412,6 +412,7 @@ graph LR
 | **v1.2.4** | 2024-12  | 配置管理优化                     | ✅ 已发布 |
 | **v1.2.5** | 2024-12  | 代码结构优化                     | ✅ 已发布 |
 | **v1.2.6** | 2024-12  | 代码清理优化                     | ✅ 已发布 |
+| **v1.2.7** | 2024-12  | 着色器系统修复与材质初始化优化   | ✅ 已发布 |
 | **v1.3.0** | 2025-01  | 组件化重构第二阶段               | 🔄 计划中 |
 
 ---
