--- a/需求文档.md
+++ b/需求文档.md
@@ -407,33 +407,67 @@ src/
 
 ## 📖 版本历史
 
+### v1.2.8 (2024-12-19)
+
+**船只数据与图标资源扩展**
+
+#### 🚢 船只类型扩展
+
+- 新增6种船只目标类型（集装箱船、油轮、散货船、驱逐舰、科考船、渔船）
+- 创建船只轨迹数据文件 (shipTrajectoryData.json)
+- 船只轨迹数据结构优化（时间排序、状态信息、位置描述）
+
+#### 🎨 图标资源创建
+
+- 设计专业化船只图标资源
+  - ✅ 通用船只图标 (ship.svg)
+  - ✅ 集装箱船图标 (container-ship.svg)
+  - ✅ 油轮图标 (oil-tanker.svg)
+  - ✅ 散货船图标 (bulk-carrier.svg)
+  - ✅ 驱逐舰图标 (destroyer.svg)
+  - ✅ 科考船图标 (research-ship.svg)
+  - ✅ 渔船图标 (fishing-boat.svg)
+
+#### 📊 设计规范统一
+
+- 图标尺寸统一为32x32像素
+- 采用SVG矢量格式确保缩放质量
+- 使用渐变色彩提升视觉效果
+- 船只轮廓设计符合实际船型特征
+
 ### v1.2.7 (2024-12-19)
+
 **着色器系统修复与材质初始化优化**
 
 #### 🔧 核心修复
+
 - 修复 `DynamicTextureShader` 中的 GLSL 语法错误
 - 解决材质系统注册和初始化问题
 - 修复着色器兼容性和性能问题
 
 #### 🏗️ 架构优化
+
 - 统一三个材质属性类的实现模式
 - 分离材质初始化逻辑到独立方法
 - 添加防重复注册保护机制
 - 优化材质属性默认值管理
 
 #### 📊 代码改进
+
 - 统一代码结构和命名规范
 - 完善错误处理和异常捕获
 - 优化材质管理器性能
 - 改进代码注释和文档
 
 #### 🛡️ 稳定性提升
+
 - 添加材质初始化保护机制
 - 增强系统错误处理能力
 - 提升材质系统健壮性
 - 优化状态管理和数据同步
 
 ### v1.2.6 (2024-12-19)
+
 **材质系统架构优化**
 
 - 🏗️ 重构材质属性类，分离初始化逻辑
@@ -442,6 +476,7 @@ src/
 - 🎨 改进材质控制面板集成
 
 ### v1.2.5 (2024-12-19)
+
 **控制面板功能完善**
 
 - 🎛️ 完善 ControlPanel 组件功能
@@ -450,6 +485,7 @@ src/
 - 🎯 改进用户交互体验
 
 ### v1.2.4 (2024-12-19)
+
 **拖拽折叠功能实现**
 
 - 🖱️ 实现通用拖拽折叠Hook
@@ -458,6 +494,7 @@ src/
 - 🎨 优化拖拽状态样式反馈
 
 ### v1.2.3 (2024-12-19)
+
 **材质系统基础功能**
 
 - 🎨 实现动态纹理材质效果
@@ -466,6 +503,7 @@ src/
 - 🔧 建立材质管理基础架构
 
 ### v1.2.2 (2024-12-19)
+
 **项目架构重构**
 
 - 🏗️ 重构组件架构，分离UI和业务逻辑
@@ -474,6 +512,7 @@ src/
 - 📊 集成Pinia状态管理
 
 ### v1.2.1 (2024-12-19)
+
 **基础功能实现**
 
 - 🌍 实现基础地图可视化功能
@@ -482,6 +521,7 @@ src/
 - 📊 建立数据管理基础
 
 ### v1.2.0 (2024-12-19)
+
 **项目初始化**
 
 - 🚀 项目基础架构搭建
@@ -490,6 +530,7 @@ src/
 - 🎨 基础UI框架搭建
 
 ### v1.1.0 (2024-12-18)
+
 **需求分析与设计**
 
 - 📋 完成需求分析和功能设计
@@ -498,6 +539,7 @@ src/
 - 🎯 制定开发路线图
 
 ### v1.0.0 (2024-12-18)
+
 **项目启动**
 
 - 🎉 项目立项和初始规划
@@ -506,6 +548,7 @@ src/
 - 📝 项目文档框架建立
 
 ### v1.3.0 (计划中)
+
 **高级功能扩展**
 
 - 🎬 时间轴控制功能
